# IMUSim

./: .dockerignore  .gitignore  CMakeLists.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docker/: Dockerfile
include/: imu_sensor.hpp  kalman_filter.hpp  logger.hpp  trajectory.hpp  vec3.hpp
plots/: plot_simulation.py
src/: imu_sensor.cpp  kalman_filter.cpp  logger.cpp  main.cpp  trajectory.cpp  vec3.cpp
tests/: test_kalman.cpp  test_sensor.cpp  trajectory_test.cpp  vec3_test.cpp
